# voiceai

./: .gitignore  README.md  experiment.ipynb  pyproject.toml  realtime_api.py  requirements.txt
src/: app.py  bm25.pkl  prompts.py  rag.py
src/data/: Agent's manual.txt
src/faiss_index/: index.faiss  index.pkl
src/src/faiss_index/: index.faiss  index.pkl
