[project]
name = "voiceai"
version = "0.1.0"
description = "Voice AI Using OpenAI API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "fastrtc[stt,tts,vad]>=0.0.23",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "langchain-openai>=0.3.14",
    "openai>=1.76.0",
    "pip>=25.0.1",
    "python-dotenv>=1.1.0",
    
]
