[project]
name = "voiceai"
version = "0.1.0"
description = "Voice AI Using OpenAI API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.10.0",
    "fastrtc[stt,tts,vad]>=0.0.23",
    "langchain-community>=0.3.22",
    "langchain-openai>=0.3.14",
    "openai>=1.76.0",
    "pip>=25.0.1",
    "python-dotenv>=1.1.0",
    "rank-bm25>=0.2.2",
]
